--- a/templates/contrato3.html
+++ b/templates/contrato3.html
@@ -1,8 +1,8 @@
 <!-- BEGIN BLOCK_ENVIO_EMAIL -->
 <script>
 $(document).ready(function(){
-		$('#bt_edit').click(function() {
-		window.location.href = 'participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}'
+		$("#bt_edit").click(function() {
+		window.location.href = "participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}"
 	});
 });
 
