--- a/templates/contrato4.html
+++ b/templates/contrato4.html
@@ -1,8 +1,8 @@
 <!-- BEGIN BLOCK_ENVIO_EMAIL -->
 <script>
 $(document).ready(function(){
-		$('#bt_edit').click(function() {
-		window.location.href = 'participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}'
+		$("#bt_edit").click(function() {
+		window.location.href = "participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}"
 	});
 });
 
@@ -21,7 +21,7 @@ $(document).ready(function(){
 <p class="paragrafo">Pelo presente instrumento de contrato, as partes abaixo qualificadas, têm justas e <STRONG>CONTRATADA</STRONG>s a Prestação de Serviços de Viagem e Turismo, em conformidade com as seguintes cláusulas.</h5>
 <h5>1. Cláusula Primeira: AS PARTES</h5>
 <p class="paragrafo">
-<strong>{nomeCompleto}</strong> nacionalidade <strong>{nacionalidade}</strong>,<strong>{estado_civil}</strong>, portador(a) da Cédula de Identidade n° <strong>{rg} - {rgOrgaoExpedidor}</strong>  , e do CPF n°<strong>{cpf}</strong>, residente e domiciliado na<strong>{endereco}</strong> na  Cidade de <strong>{cidade}-{uf}</strong> doravante simplesmente  <STRONG>CONTRATANTE</STRONG>; e ROSA MÍSTICA TURISMO LTDA., pessoa jurídica de direito privado, regularmente inscrita no CNPJ sob o n° 00.370.398/0001?58, com sede na Rua Azeredo Coutinho, 70-A ? Várzea, na cidade de Recife/PE, doravante simplesmente denominada <STRONG>CONTRATADA</STRONG>.</p>
+<strong>{nomeCompleto}</strong> nacionalidade <strong>{nacionalidade}</strong>,<strong>{estado_civil}</strong>, da Cédula de Identidade n°<strong>{rg} - {rgOrgaoExpedidor}</strong>, e do CPF n°<strong>{cpf}</strong>, residente e domiciliado na<strong>{endereco}</strong> na  Cidade de <strong>{cidade}-{uf}</strong> doravante simplesmente  <STRONG>CONTRATANTE</STRONG>; e ROSA MÍSTICA TURISMO LTDA., pessoa jurídica de direito privado, regularmente inscrita no CNPJ sob o n° 00.370.398/0001?58, com sede na Rua Azeredo Coutinho, 70-A ? Várzea, na cidade de Recife/PE, doravante simplesmente denominada <STRONG>CONTRATADA</STRONG>.</p>
 <h5>2. Cláusula Segunda: DO OBJETO</h5>
 <p class="paragrafo">
 2.1. A <STRONG>CONTRATADA</STRONG> prestará ao <STRONG>CONTRATANTE</STRONG> os serviços que envolvem a venda de pacote turístico abaixo descrito, cujas características e valores estão explicitados no Roteiro de Viagem, que fará parte integrante deste contrato.
