--- a/templates/contrato2.html
+++ b/templates/contrato2.html
@@ -1,8 +1,8 @@
 <!-- BEGIN BLOCK_ENVIO_EMAIL -->
 <script>
 $(document).ready(function(){
-		$('#bt_edit').click(function() {
-		window.location.href = 'participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}'
+		$("#bt_edit").click(function() {
+		window.location.href = "participante.editarContrato.php?idGrupo={ID_GRUPO_HASH}&idParticipante={ID_PARTICIPANTE_HASH}"
 	}); 	
 });
 
@@ -20,7 +20,7 @@ $(document).ready(function(){
 <h5><center>CONTRATO PARTICULAR DE PRESTAÇÃO DE SERVIÇOS DE VIAGENS E TURISMO</center></h5><br />
 <p class="paragrafo">Pelo presente instrumento de contrato, as partes abaixo qualificadas, têm justas e contratadas a Prestação de Serviços de Viagem e Turismo, em conformidade com as seguintes cláusulas.</p>
 <p class="paragrafo">
-1. Cláusula Primeira: <strong>{nomeCompleto}</strong>,(<strong>{nacionalidade}</strong><span class="GramE">)</span>, (<strong>{estado_civil}</strong>),  portador da Cédula de Identidade n°  <strong>{rg} - {rgOrgaoExpedidor}</strong> e do CPF n° <strong>{cpf}</strong> residente e domiciliado á <strong>{endereco}</strong> Cidade de <strong>{cidade}-{uf}</strong>, doravante simplesmente denominada CONTRATANTE; e, RAINHA TOUR E VIAGENS LTDA ,  pessoa jurídica de direito privado, regularmente   inscrita no CNPJ: sob o n° 12.415.719/0001-72 , com sede na  SRTVS  QD 701  -  Edif.. Assis Chateaubriand ? Bloco II ? Sala 208  - Asa Sul  -  Brasília ? DF  PE, doravante simplesmente denominada CONTRATADA.</p>
+1. Cláusula Primeira: <strong>{nomeCompleto}</strong>,(<strong>{nacionalidade}</strong><span class="GramE">)</span>, <strong>{estado_civil}</strong>, da Cédula de Identidade n°<strong>{rg} - {rgOrgaoExpedidor}</strong>, e do CPF n° <strong>{cpf}</strong> residente e domiciliado á <strong>{endereco}</strong> Cidade de <strong>{cidade}-{uf}</strong>, doravante simplesmente denominada CONTRATANTE; e, RAINHA TOUR E VIAGENS LTDA ,  pessoa jurídica de direito privado, regularmente   inscrita no CNPJ: sob o n° 12.415.719/0001-72 , com sede na  SRTVS  QD 701  -  Edif.. Assis Chateaubriand ? Bloco II ? Sala 208  - Asa Sul  -  Brasília ? DF  PE, doravante simplesmente denominada CONTRATADA.</p>
 <h5>2. Cláusula segunda: DO OBJETO</h5>
 <p class="paragrafo">
 2.1. A CONTRATADA prestará ao CONTRATANTE os serviços que envolvem a venda de pacote turístico abaixo descrito, cujas características e valores estão explicitados no roteiro, que fará parte integrante deste contrato.
