--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -650,7 +650,7 @@ function blockAcomp(numero,disabled){
 
 
       function preencheForm(cliente){
-        console.log(cliente.nomeCompleto);
+        console.log(cliente);
         $("#nomeCompleto").val(cliente.nomeCompleto);
         $("#email").val(cliente.email);
         $("#datanascimento").val(cliente.dataNascimento);
