edicao de vendas online

--- a/templates/web.lista.html
+++ b/templates/web.lista.html
@@ -28,7 +28,8 @@
                 <th width="">Participante(s)</th>
                 <th width="">Forma</th>
                 <th width="">Tipo</th>
-                <th width="">GerenciaNet</th>                               
+                <th width="">GerenciaNet</th>    
+                <th width="10">-</th>                           
             </tr>
         </thead>
         <tbody>
@@ -38,7 +39,8 @@
                 <td style="text-align: left;"><a href="cadastro.clienteEdita.php?idCliente={ID_CLIENTE_HASH}">{PARTICIPANTE}</a></td></td>
                 <td style="text-align: left;">{FORMA}</td>
                 <td style="text-align: left;">{TIPO}</td>
-                <td style="text-align: left;">{CHARGE_IDS}</td>                
+                <td style="text-align: left;">{CHARGE_IDS}</td>    
+                <td style="text-align: left;"><a href="web.editar.php?idVenda={ID_VENDA}" class="btn btn-default" title="Editar Pagamentos"><i class="icon-pencil"></i></a></td>             
             </tr>
             <!-- END BLOCK_ITEM_LISTA -->
         </tbody>
